[package]
name = "BeepSortMacroQuad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
async-trait = "0.1.64"
tokio-test = "*"
async-recursion = "1.0.2"
[profile.release]
opt-level=3
